# study-gen

./: .gitignore  README.md  pyproject.toml
.github/workflows/: linting_testing.yml  publish.yml
examples/collider_from_mad/: config.yaml  gen1.py  gen2.py  generate.ipynb  master.yaml
examples/collider_from_mad/blocks/: b100_prepare_mad_environment.py  (+17 more)
examples/dummy/: config.yaml  gen2.py  generate.ipynb  master.yaml
examples/hllhc16/: build_base_collider.py  config.yaml  gen1.py  generate.ipynb  master.yaml  tree.yaml
prototyping/: recipes.yaml
prototyping/advanced/: config.yaml  recipes.yaml
prototyping/collider_from_mad/: config.yaml  gen1.py  gen2.py  generate.ipynb  master.yaml  test.py
prototyping/dummy/: config.yaml  debug.ipynb  gen1.py  generate.ipynb
prototyping/particles_distribution/: gen1.py  generate.ipynb  master.yaml
prototyping/simple/: debug.ipynb  generate_clean.ipynb
prototyping_simple/: config.yaml  debug.ipynb  gen1.py  gen2.py  generate.ipynb  generate_clean.ipynb  master.yaml  output_jinja_test_gen1.py  output_test_gen1.py  recipes.yaml
prototyping_simple/blocks/: __init__.py  add.py  multiply.py  power.py  print_result.py
prototyping_simple/src/: __init__.py  _merge_blocks.py  block.py  merge.py  study_gen.py
prototyping_simple/templates/: default_template.txt
study_gen/: __init__.py  block.py  study_gen.py
study_gen/blocks/: gamma.py  print_result.py  save_npy.py
study_gen/merge/: __init__.py  _merge_blocks.py
study_gen/templates/: template_with_context.txt
tests/: test_block.py  test_study_gen.py
(+163 files in other folders)
