[tool.poetry]
name = "study-gen"
version = "0.1.0"
description = "A tool to generate parametric studies with Xsuite."
authors = ["Colas Droin <colasdroin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
