[tool.poetry]
name = "study-gen"
version = "0.1.0"
description = "A tool to generate parametric studies with Xsuite."
authors = ["Colas Droin <colasdroin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
cpymad = "^1.14.2"
pandas = "^2.1.3"
matplotlib = "^3.8.2"
xsuite = "^0.5.1"
ruamel-yaml = "^0.18.5"
ipykernel = "^6.28.0"
jinja2 = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
